[package]
name = "web-mercator"
version = "0.1.1"
edition = "2021"
description = "Web Mercator projection and perspective map viewport/fitBounds math compatible with Mapbox GL and deck.gl"
license = "MIT"
repository = "https://github.com/hey-jj/web-mercator-viewport"
readme = "README.md"
keywords = ["mercator", "geospatial", "mapping", "viewport", "projection"]
categories = ["science::geo", "mathematics", "graphics"]

[dependencies]
